# weathermap_generator

./: README.md  build_weather_map.py  interactive_heatmap.html  pyproject.toml  pytest.ini  requirements-test.txt  weather.json
.github/workflows/: test.yml
examples/: interactive_heatmap.html
src/: interactive_heatmap.html  weather_map.py
tests/: conftest.py  test_interactive_heatmap.py  test_weather_data_fetcher.py
